cf/template.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: 
  Create Env

Metadata: 
  "AWS::CloudFormation::Interface": 
    ParameterGroups: 
      - Label: 
          default: "Project Name Prefix"
        Parameters: 
          - PJPrefix
      - Label: 
          default: "Network Configuration"
        Parameters: 
          - VPCCIDR
          - PublicSubnetCIDR
          - PrivateSubnetCIDR
          - AccessSubnetCIDR
      - Label: 
          default: "EC2 Configuration"
        Parameters: 
          - EC2KeyPairName

    ParameterLabels: 
      VPCCIDR: 
        default: "VPC CIDR"
      PublicSubnetCIDR: 
        default: "PublicSubnet CIDR"
      PrivateSubnetCIDR: 
        default: "PrivateSubnet CIDR"
      AccessSubnetCIDR: 
        default: "AccessSubnet CIDR"
      EC2KeyPairName: 
        default: "EC2 KeyPair Name"


# ------------------------------------------------------------#
# Input Parameters
# ------------------------------------------------------------# 
Parameters:
  PJPrefix:
    Type: String

  VPCCIDR:
    Type: String
    Default: "10.0.0.0/16"

  PublicSubnetCIDR:
    Type: String
    Default: "10.0.1.0/24"

  PrivateSubnetCIDR:
    Type: String
    Default: "10.0.2.0/24"

  AccessSubnetCIDR:
    Type: String
    Default: "0.0.0.0/32"

  EC2KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName

Resources: 
# ------------------------------------------------------------#
#  VPC
# ------------------------------------------------------------#
  VPC: 
    Type: "AWS::EC2::VPC"
    DeletionPolicy: "Delete"
    Properties: 
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-vpc"

# InternetGateway Create
  InternetGateway: 
    Type: "AWS::EC2::InternetGateway"
    DeletionPolicy: "Delete"
    Properties: 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-igw"

# IGW Attach
  InternetGatewayAttachment: 
    Type: "AWS::EC2::VPCGatewayAttachment"
    DeletionPolicy: "Delete"
    Properties: 
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC 

# ------------------------------------------------------------#
#  Subnet
# ------------------------------------------------------------#          
  PublicSubnet: 
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Delete"
    Properties: 
      AvailabilityZone: "ap-northeast-1a"
      CidrBlock: !Ref PublicSubnetCIDR
      VpcId: !Ref VPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-public-subnet"

  PrivateSubnet: 
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Delete"
    Properties: 
      AvailabilityZone: "ap-northeast-1a"
      CidrBlock: !Ref PrivateSubnetCIDR
      VpcId: !Ref VPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-private-subnet"

# ------------------------------------------------------------#
#  RouteTable
# ------------------------------------------------------------#          
  PublicRouteTable: 
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Delete"
    Properties: 
      VpcId: !Ref VPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-public-route"

  PrivateRouteTable: 
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Delete"
    Properties: 
      VpcId: !Ref VPC 
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-private-route"

# ------------------------------------------------------------#
# Routing
# ------------------------------------------------------------# 
  PublicRoute: 
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Delete"
    Properties: 
      RouteTableId: !Ref PublicRouteTable 
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway 
      
  # PrivateRoute: 
  #   Type: "AWS::EC2::Route"
  #   DeletionPolicy: "Delete"
  #   Properties: 
  #     RouteTableId: !Ref PrivateRouteTable 
  #     DestinationCidrBlock: "0.0.0.0/0"
  #     GatewayId: !Ref InternetGateway 

# ------------------------------------------------------------#
# RouteTable Associate
# ------------------------------------------------------------# 
  PublicSubnetRouteTableAssociation: 
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Delete"
    Properties: 
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnetRouteTableAssociation: 
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Delete"
    Properties: 
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

# ------------------------------------------------------------#
#  Security Group
# ------------------------------------------------------------# 
  PublicAccessSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Delete"
    Properties:
      GroupDescription: !Sub "${PJPrefix}-publicaccess-sg"
      GroupName: !Sub "${PJPrefix}-publicaccess-sg"     
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref AccessSubnetCIDR
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AccessSubnetCIDR
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref PrivateSubnetCIDR
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: "0.0.0.0/0"

  PrivateAccessSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Delete"
    Properties:
      GroupDescription: !Sub "${PJPrefix}-privateaccess-sg"
      GroupName: !Sub "${PJPrefix}-privateaccess-sg"     
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          # CidrIp: !Ref PublicSubnetCIDR 
          SourceSecurityGroupId: !Ref PublicAccessSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: "0.0.0.0/0"

# ------------------------------------------------------------#
#  VPC Endpoint
# ------------------------------------------------------------# 

  SSMEndpoint:
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      VpcId: !Ref VPC
      SubnetIds:
        - !Ref PrivateSubnet
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref PublicAccessSecurityGroup
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.ssm"
      VpcEndpointType: "Interface"
      # Tags: 
      #   - Key: Name
      #     Value: !Sub "${PJPrefix}-ssm-endpoint"

  EC2MessageEndpoint:
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      VpcId: !Ref VPC
      SubnetIds:
        - !Ref PrivateSubnet
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref PublicAccessSecurityGroup
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.ec2messages"
      VpcEndpointType: "Interface"
      # Tags: 
      #   - Key: Name
      #     Value: !Sub "${PJPrefix}-ec2message-endpoint"

  SSMmessageEndpoint:
    Type: "AWS::EC2::VPCEndpoint"
    DeletionPolicy: "Delete"
    Properties:
      VpcId: !Ref VPC
      SubnetIds:
        - !Ref PrivateSubnet
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref PublicAccessSecurityGroup
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.ssmmessages"
      VpcEndpointType: "Interface"
      # Tags: 
      #   - Key: Name
      #     Value: !Sub "${PJPrefix}-ssmmessage-endpoint"

# ------------------------------------------------------------#
#  IAM
# ------------------------------------------------------------# 
  TestSSMRole:
    Type: AWS::IAM::Role
    DeletionPolicy: "Delete"
    Properties: 
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "ec2.amazonaws.com"
            Action: "sts:AssumeRole"
      Description:
        Describe what you want
      ManagedPolicyArns: 
        - "arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM"
      RoleName: "test-ssm-role"
      # Policies: 
      #   - PolicyName: AmazonEC2RoleforSSM
      #     PolicyDocument:
      #       Version: "2012-10-17"
      #       Statement:
      #         - Effect: "Allow"
      #           Action: "*"
      #           Resource: "*"
  TestSSMInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    DeletionPolicy: "Delete"
    Properties: 
      InstanceProfileName: "test-EC2instanceprofileforSSM"
      # Path: String
      Roles: 
        - !Ref TestSSMRole

# ------------------------------------------------------------#
#  EC2
# ------------------------------------------------------------# 
  PublicEC2:
    Type: AWS::EC2::Instance
    DeletionPolicy: "Delete"
    Properties: 
      ImageId: "ami-0992fc94ca0f1415a"
      InstanceType: "t2.nano"
      KeyName: !Ref EC2KeyPairName
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          SubnetId: !Ref PublicSubnet
          GroupSet:
            - !Ref PublicAccessSecurityGroup
      # IamInstanceProfile:
      #   !Ref TestSSMInstanceProfile
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-public-ec2"

  PrivateEC2:
    Type: AWS::EC2::Instance
    DeletionPolicy: "Delete"
    Properties: 
      ImageId: "ami-0992fc94ca0f1415a"
      InstanceType: "t2.nano"
      KeyName: !Ref EC2KeyPairName
      NetworkInterfaces:
        - AssociatePublicIpAddress: false
          DeviceIndex: "0"
          SubnetId: !Ref PrivateSubnet
          GroupSet:
            - !Ref PrivateAccessSecurityGroup
      IamInstanceProfile:
        !Ref TestSSMInstanceProfile
      Tags: 
        - Key: Name
          Value: !Sub "${PJPrefix}-private-ec2"  

# ------------------------------------------------------------#
# Output Parameters
# ------------------------------------------------------------#                
# VPC
Outputs:
  VPC:
    Value: !Ref VPC
    Export:
      Name: !Sub "${PJPrefix}-vpc"

  VPCCIDR:
    Value: !Ref VPCCIDR
    Export:
      Name: !Sub "${PJPrefix}-vpc-cidr"

# Subnet
  PublicSubnet:
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub "${PJPrefix}-public-subnet"

  PublicSubnetCIDR:
    Value: !Ref PublicSubnetCIDR
    Export:
      Name: !Sub "${PJPrefix}-public-subnet-cidr"

  PrivateSubnet:
    Value: !Ref PrivateSubnet
    Export:
      Name: !Sub "${PJPrefix}-private-subnet"

  PrivateSubnetCIDR:
    Value: !Ref PrivateSubnetCIDR
    Export:
      Name: !Sub "${PJPrefix}-private-subnet-cidr"

  AccessSubnetCIDR: 
    Value: !Ref AccessSubnetCIDR
    Export:
      Name: !Sub "${PJPrefix}-access-subnet-cidr"

# Route
  PublicRouteTable:
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub "${PJPrefix}-public-route"

  PrivateRouteTable:
    Value: !Ref PrivateRouteTable
    Export:
      Name: !Sub "${PJPrefix}-private-route"

# Security Group
  PublicAccessSecurityGroup:
    Value: !Ref PublicAccessSecurityGroup
    Export:
      Name: !Sub "${PJPrefix}-pubaccess-security-group"

  PrivateAccessSecurityGroup:
    Value: !Ref PrivateAccessSecurityGroup
    Export:
      Name: !Sub "${PJPrefix}-sgaccess-security-group"

# EC2
  PublicEC2:
    Value: !Ref PublicEC2
    Export:
      Name: !Sub "${PJPrefix}-public-ec2"
      
  PrivateEC2:
    Value: !Ref PrivateEC2
    Export:
      Name: !Sub "${PJPrefix}-private-ec2"
